third_party/rust/cstr/tests/compile_fail/trash-after.rs
use cstr::cstr;

fn main() {
    let _foo = cstr!("foo" + "bar");
}
