third_party/rust/cstr/tests/compile_fail/trash-after.stderr
error: unexpected token
 --> $DIR/trash-after.rs:4:28
  |
4 |     let _foo = cstr!("foo" + "bar");
  |                            ^
